# cyme-extract-pypi

./: .gitignore  README.md  autotest.sh  pyproject.toml  requirements.txt
docs/: README.md
src/cyme-extract/: example.py
src/cymeextract/: __init__.py  main.py
tests/: Objective.md  test.ipynb  write_glm.py
tests/input_1/: test_1.py
tests/input_2/: test_2.py
