[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cyme-extract"
version = "0.0.2"
authors = [
  { name="Mitchell Victoriano", email="mvicto@slac.stanford.edu" },
]
description = "Extract a CYME MDB file to its constituent tables in CSV format."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/slacgismo/cyme-extract-pypi"
"Bug Tracker" = "https://github.com/slacgismo/cyme-extract-pypi/issues"